--- a/script.Rmd
+++ b/script.Rmd
@@ -5,16 +5,25 @@ output:
   pdf_document: default
   html_document: default
 date: "2022-12-16"
-category: "Catégorie 25"
+geometry: margin=2.5cm
+fontzie: 12pt
+header-includes:
+    - \usepackage{setspace}\onehalfspacing
 ---
-\newpage
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
-
-# TODO savoir l'unité de la longueur des branches => taux d'évolution est en ?.Ma^-1
 ```
 
+```{=tex}
+\newpage
+\onehalfspacing
+```
+# Introduction
+
+Les primates et les rongeurs ayant un ancêtre commun, il a été trouvé des séquences d'exons orthologues chez ces deux espèces. Ce projet a pour but d'étudier la vitesse d'évolution des séquences exoniques ayant un pourcentage de G+C~3~ similaire. Comme la souris et l'Homme ont divergé depuis 90 Ma et que le pourcentage de G+C~3~ présente des variations importantes en général nous nous attendons à ce que la vitesse d'évolution soit différente.
+
+# Estimation du taux d'évolution pour chacune des six branches
 
 ```{r}
 library(ape)
@@ -42,12 +51,8 @@ macaque = c(M, M)
 rat = c(R, R)
 ```
 
-
 ```{r}
-
-# Récupération des id des noeuds pour chaque arbre et pour chaque espèce/ancêtre
-# Récupération de la matrice des distances pour chaque arbre
-
+# Récupération des MRCA (ID des noeuds) pour chaque arbre et pour chaque espèce/ancêtre
 mrca_species = c()
 mrca_rodents = c()
 mrca_primates = c()
@@ -57,6 +62,7 @@ mrca_rat = c()
 mrca_macaque = c()
 tab_dist = c()
 
+# Récupération de la matrice des distances pour chaque arbre
 for (i in 1:length(trees)) {
   mrca_species[i] = getMRCA(trees[[i]], species)
   mrca_rodents[i] = getMRCA(trees[[i]], rodents)
@@ -70,11 +76,8 @@ for (i in 1:length(trees)) {
 }
 ```
 
-
 ```{r}
-
-# Récupération des distances entre 2 noeuds
-# Les distances entre noeuds suivent la relation de Chasles
+#Création de vecteurs vides qui vont contenir les distances entre deux MRCA
 dist_rodents.mouse = c()
 dist_rodents.rat = c()
 dist_primates.human = c()
@@ -82,7 +85,8 @@ dist_primates.macaque = c()
 dist_primates.species = c()
 dist_rodents.species = c()
 
-
+# Récupération des distances entre 2 noeuds
+# Les distances entre noeuds suivent la relation de Chasles
 for (i in 1:length(mrca_human)) {
   dist_rodents.mouse[i] = tab_dist[[i]][mrca_rodents[i], mrca_mouse[i]]
   dist_rodents.rat[i] = tab_dist[[i]][mrca_rodents[i], mrca_rat[i]]
@@ -93,11 +97,8 @@ for (i in 1:length(mrca_human)) {
 }
 ```
 
-
 ```{r}
-
-# Conversion en taux d'évolution en divisant par le temps depuis l'événement de spéciation
-
+#Création de vecteurs vides qui vont contenir les taux d'évolution
 r_rodents.mouse = c()
 r_rodents.rat = c()
 r_primates.human = c()
@@ -105,6 +106,8 @@ r_primates.macaque = c()
 r_primates.species = c()
 r_rodents.species = c()
 
+# stockage du taux d'évolution dans les vecteurs vides
+#en divisant la distance par le temps depuis l'événement de spéciation
 for (i in 1:length(dist_primates.human)) {
   r_rodents.mouse[i] = dist_rodents.mouse[i]/15
   r_rodents.rat[i] = dist_rodents.rat[i]/15
@@ -115,30 +118,43 @@ for (i in 1:length(dist_primates.human)) {
 }
 ```
 
+Voir **annexe 1** pour la distribution des taux d'évolution des six espèces sous forme de boîtes à moustache.
+
+# Distribution des taux d'évolution
+
+## Médiane, quantiles à 5% et 95% de chacune des six branches
 
 ```{r}
 # Médiane, quantiles 5% et 95%
-
-var = list("RS" = r_rodents.mouse, 
-           "RR" = r_rodents.rat, 
-           "RH" = r_primates.human, 
-           "RM" = r_primates.macaque, 
-           "RPRI" = r_primates.species, 
-           "RROD" = r_rodents.species
-           )
-
+#création des variables qui vont contenir la médiane et les quantiles
+taux_devolution = list("RS" = r_rodents.mouse, "RR" = r_rodents.rat, 
+                       "RH" = r_primates.human, "RM" = r_primates.macaque, 
+                       "RPRI" = r_primates.species, "RROD" = r_rodents.species
+                       )
+#création de vecteurs vides
 mediane = c()
 quantile5 = c()
 quantile95 = c()
 
-mediane = unname(unlist(lapply(var, median)))
-quantile5 = unname(unlist(lapply(var, quantile, p = c(0.05))))
-quantile95 = unname(unlist(lapply(var, quantile, p = c(0.95))))
+#application de la fonction médiane quantiles5 et quantiles95
+#à la liste taux_devolution qui contient tous les taux d'évolutions
+mediane = unname(unlist(lapply(taux_devolution, median)))
+quantile5 = unname(unlist(lapply(taux_devolution, quantile, p = c(0.05))))
+quantile95 = unname(unlist(lapply(taux_devolution, quantile, p = c(0.95))))
 
-tab_r = data.frame(names(var), quantile5, mediane, quantile95)
+#création d'un dataframe résumant les informations
+tab_r = data.frame(names(taux_devolution), quantile5, mediane, quantile95)
 knitr::kable(tab_r)
 ```
 
+-   **RS**, R~S~ : le taux d'évolution de la souris *Mus musculus* depuis l'ancêtre des rongeurs
+-   **RR**, R~R~ : le taux d'évolution du rat *Ratus norvegicus* depuis l'ancêtre des rongeurs
+-   **RH**, R~H~ : le taux d'évolution de l'humain *Homo sapiens* depuis l'ancêtre des primates
+-   **RM**, R~M~ : le taux d'évolution du macaque *Macaca fascicularis* depuis l'ancêtre des primates
+-   **RPRI**, R~PRI~ : le taux d'évolution de l'ancêtre des primates depuis l'ancêtre des euarchontoglires
+-   **RROD**, R~ROD~ : le taux d'évolution de l'ancêtre des rongeurs depuis l'ancêtre des euarchontoglires
+
+## Histogramme des taux d'évolution de l'humain et de la souris
 
 ```{r}
 library(ggplot2)
@@ -149,44 +165,41 @@ library(dplyr)
 tab_hist = data.frame(r_rodents.mouse, r_primates.human, id = 1:length(r_rodents.mouse))
 tab_hist = melt(tab_hist, id.vars="id")
 
-# Plot
+# Histogramme représentant le taux d'évolution de GC3 chez l'Homme et la souris
 ggplot(tab_hist, aes(x=value, color=variable)) +
-  geom_histogram(aes(y=..density..), fill="white", alpha=0.5, position="dodge", bins=30)  +
+  geom_histogram(aes(y=..count..), fill="white", alpha=0.5, position="dodge", bins=30)  +
   theme_bw() + 
-  xlab(expression(Taux~"d'évolution"~("???" %.%Ma^{-1}))) +   
+  xlab(expression(Taux~"d'évolution"~("Nombre de substitutions par site" %.%Ma^{-1}))) +   
   scale_color_manual(labels = c(expression(italic(Mus~musculus)), expression(italic(Homo~sapiens))),
-                     values = c("blue", "red")) +
-  geom_density()
+                     values = c("blue", "red"))
 ```
 
+Il semble y avoir un taux d'évolution plus important chez la souris que chez l'Homme. Nous pouvons emettre l'hypothèse que le pourcentage de G+C~3~ chez l'Homme évolue moins que celui de la souris puisque ces mutations seraient délétères. Les mutations à cet endroit de l'exon sont certainement contre seléctionnées chez l'Homme tandis que chez la souris elles seraient bénéfiques et se fixeraient donc avec plus de probabilité. De plus, l'Homme ayant un temps de génération plus long que la souris le taux d'évolution serait donc plus lent. Nous savons que l'horloge moléculaire peut varier entre lignée surtout si les temps de générations sont différents.
 
-```{r}
-# graphe commun
+Nous observons un taux d'évolution hétérogène entre gènes intra-espèces. Cela doit être dû au hasard des mutations.
 
-library(ggplot2)
-library(ggpubr)
+# Synthèse et perspectives
 
-dt = read.csv(file='csv.Rfriendly_incomplet.csv', sep=",", dec=".")
-dt$espece=factor(dt$espece)
-dt$quantile=factor(dt$quantile)
+Voir **annexe 2** pour le tableau des données mises en commun
 
-ggplot(dt,aes(x = centre_classe, y = valeur))+
-  geom_point(mapping = aes(x = centre_classe, y = valeur, color = quantile,
-                           shape = espece), size = 3) +
-  theme_bw() + 
-  ylab(expression(Taux~"d'évolution"~("???" %.%Ma^{-1}))) +   
-  xlab(expression(G+C[3]~'%'~moyen~'(%)')) +
-  scale_shape_manual(labels = c(expression(italic(Homo~sapiens)), expression(italic(Mus~musculus))), values = c('circle', 'triangle')) +
-  geom_smooth(method = "lm", se = FALSE) +
-  stat_cor(aes(label = ..rr.label..), color = "red", geom = "label") +
-  facet_grid(~ espece)
-```
+Voir **annexe 3** pour le graphe de nuage de points issu du tableau de l'annexe 2
 
+Les quantiles et les médianes pour la souris entre les différents groupes semblent tous concorder puisqu'ils ont les mêmes ordres de grandeurs. Il en va de même pour l'Homme. Dans ce dernier, la dispersion semble bien plus faible que chez la souris où les quantiles sont plus éloignés de la médiane que chez l'Homme.
 
-```{r}
-# PAS DEMANDE
-# TODO ITALIQUE
+Nous observons que lorsque le pourcentage moyen de G+C~3~ augmente chez l'Homme le taux d'évolution augmente. Le contraire est observé chez la souris.
 
+Pour vérifier si cela est généralisable il faudrait plus de réplicats. Ici nous n'en avons que 11. Il faudrait également comparer entre d'autre espèces avec des temps de divergences différents pour vérifier la corrélation.
+
+\newpage
+
+# Annexes
+
+## Annexe 1 : taux d'évolution pour différentes espèces depuis leur ancêtre d'intérêt
+
+```{r, echo=FALSE}
+# ANNEXE3 : facilitation de visualisation 
+
+#Taux d'évolution pour chaque espèce
 library(ggplot2)
 library(reshape2)
 tab_visu = data.frame(r_rodents.mouse, r_rodents.rat, r_rodents.species,
@@ -196,12 +209,56 @@ tab_visu = melt(tab_visu) # transformation d'un tableau large en tableau long (i
 ggplot(tab_visu, aes(x=variable,y=value,fill=variable))+
   geom_boxplot(alpha = 0.7, outlier.shape = NA) +
   theme_bw() + 
-  ylab(expression(Taux~"d'évolution"~("???" %.%Ma^{-1}))) +   
+  ylab(expression(Taux~"d'évolution"~("Nombre de substitutions par site" %.%Ma^{-1}))) +   
   geom_point(position=position_jitterdodge(), aes(colour = variable), size = 0.9) +
   scale_x_discrete(labels=expression("Rodentia-Mus musculus", "Rodentia-Rattus norvegicus", "Rodentia-Euarchontoglires", "Primates-Homo sapiens", "Primates-Macaca fascicularis", "Primates-Euarchontoglires")) +
   theme(legend.position="none") +
   theme(axis.title.y=element_blank()) +
-  coord_flip() +
-  scale_y_continuous(trans=scales::pseudo_log_trans(base = 10))
-
+  coord_flip()
 ```
+
+## Annexe 2 : tableau récapitulatif des résultats pour différents pourcentages de G+C~3~
+
+```{r, echo=FALSE}
+
+dt = read.csv(file='csv.Rfriendly_incomplet.csv', sep=",", dec=".")
+dt$espece=factor(dt$espece)
+dt$quantile=factor(dt$quantile)
+
+#ANNEXE 2 : Tableau de données en commun
+knitr::kable(dt)
+```
+
+-   **categorie** : catégorie choisie par un groupe
+-   **centre_classe** : moyenne entre les bornes inférieure et supérieure des catégories
+-   **espece** : espèces étudiées, souris et humain
+-   **valeur** : taux d'évolution en nombre de substitutions par site par Ma
+
+## Annexe 3 : nuage de points du tableau récapitulatif des résultats pour différents pourcentages de G+C~3~
+
+```{r, echo=FALSE}
+# ANNEXE3 : facilitation de visualisation 
+#graphe commun
+
+library(ggplot2)
+library(ggpubr)
+library(ggpmisc)
+
+ggplot(data = dt, aes(x = centre_classe, y = valeur)) +
+  geom_point(mapping = aes(x = centre_classe, y = valeur, color = quantile,
+                           shape = espece), size = 2.5, alpha=0.8) +
+  theme_bw() + 
+  ylab(expression(Taux~"d'évolution"~("Nombre de substitutions par site" %.%Ma^{-1}))) +   
+  xlab(expression(G+C[3]~moyen~'(%)')) +
+  scale_shape_manual(labels = c(expression(italic(Homo~sapiens)), expression(italic(Mus~musculus))), values = c('circle', 'triangle')) +
+  scale_color_discrete(labels=c("5%", "Médiane", "95%")) +
+  labs(color="Quantile", shape="Espèce") +
+  stat_poly_line(color="black") +
+  stat_poly_eq(aes(label.y=0.5, label = after_stat(rr.label))) +
+  facet_grid(~ espece)
+  #   geom_smooth(method = "lm", se = FALSE, aes(color=quantile))
+```
+
+**Nuage de points représentant le taux d'évolution de l'humain et de la souris en fonction du pourcentage de G+C~3~ pour différents quantiles (5%, médiane, 95%)**
+
+La droite de régression linéaire a été générée en poolant les quantiles mais pas l'espèce.
